add dependency coffee-script (required by poseidon-mongo)

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"extend": "~1.2.1",
 		"bluebird": "~2.1.2",
 		"poseidon-mongo": "~0.2.0",
+		"coffee-script": "~1.7.1",
 		"rename-key": "~1.1.1",
 		"debug": "~1.0.2"
 	}
