--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 	"dependencies": {
 		"extend": "~1.2.1",
 		"bluebird": "~2.1.2",
-		"poseidon-mongo": "~0.2.0",
+		"mongodb": "^2.0.3",
 		"coffee-script": "~1.7.1",
 		"rename-key": "~1.1.1",
 		"debug": "~1.0.2"
