--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"extend": "~1.2.1",
+		"object-assign": "^2.0.0",
 		"bluebird": "~2.1.2",
 		"mongodb": "^2.0.3",
 		"coffee-script": "~1.7.1",
