update author in package.json

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 	],
 	"author": {
 		"name": "Thomas Jensen",
-		"email": "thomas@tjconcept.dk",
-		"url": "http://tjconcept.dk"
+		"email": "thomas@src.agency",
+		"url": "http://src.agency"
 	},
 	"repository": {
 		"type": "git",
