--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://bitbucket.org/src-agency/njs-mongo-document.git"
+		"url": "https://github.com/srcagency/mongo-document.git"
 	},
 	"license": "MIT",
 	"dependencies": {
