--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"mongodb": "^2.0.3",
 		"coffee-script": "~1.7.1",
 		"rename-key": "~1.1.1",
-		"debug": "~1.0.2"
+		"debug": "~1.0.2",
+		"without-keys": "^0.0.3"
 	}
 }
