--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
 	"license": "MIT",
 	"dependencies": {
 		"object-assign": "^2.0.0",
-		"bluebird": "~2.1.2",
+		"bluebird": "^2.9.9",
 		"mongodb": "^2.0.16",
-		"rename-key": "~1.1.1",
-		"debug": "~1.0.2",
+		"rename-key": "^1.1.1",
+		"debug": "^2.1.1",
 		"without-keys": "^0.0.3"
 	}
 }
